.config/Code/logs/20250202T111006/window1/exthost/output_logging_20250202T115908/4-Build Server for Gradle (Build).log
> Build starts at 2025-02-02 12:02:59
Task :shared:compileJava started
Task :shared:compileJava UP-TO-DATE
------

> Build starts at 2025-02-02 12:03:00
Task :manager:compileJava started
Task :manager:compileJava failed
------

Could not execute build using connection to Gradle distribution 'https://services.gradle.org/distributions/gradle-8.11.1-bin.zip'.
/home/samuelg/Projects/fleet-manager/backend/src/manager/main/tv/fleet/manager/maintenances/domain/PendingMaintenance.java:13: error: error while writing PendingMaintenance: /home/samuelg/Projects/fleet-manager/backend/src/manager/build/classes/java/main/tv/fleet/manager/maintenances/domain/PendingMaintenance.class
public class PendingMaintenance extends AggregateRoot {
       ^
Note: /home/samuelg/Projects/fleet-manager/backend/src/manager/main/tv/fleet/manager/maintenances/infrastructure/persistence/MySqlMaintenancePendingRepository.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':manager:compileJava'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  Note: /home/samuelg/Projects/fleet-manager/backend/src/manager/main/tv/fleet/manager/maintenances/infrastructure/persistence/MySqlMaintenancePendingRepository.java uses or overrides a deprecated API.
  /home/samuelg/Projects/fleet-manager/backend/src/manager/main/tv/fleet/manager/maintenances/domain/PendingMaintenance.java:13: error: error while writing PendingMaintenance: /home/samuelg/Projects/fleet-manager/backend/src/manager/build/classes/java/main/tv/fleet/manager/maintenances/domain/PendingMaintenance.class
  public class PendingMaintenance extends AggregateRoot {
         ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 5s

